<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:pikolo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.drawingapp.DrawingFragment">

    <!-- Left-side vertical Tools Panel -->

    <!-- Main area which includes the CustomView and horizontal toolbars -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Top horizontal toolbar -->

        <!-- Custom Drawing View -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:src="@drawable/three_bar_icon" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:text="Save" />

            <Button
                android:id="@+id/loadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Load" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Clear" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:freezesText="false"
                app:icon="@drawable/shareicon"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="15dp" />

        </LinearLayout>

        <com.example.drawingapp.CustomView
            android:id="@+id/customView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/colorPickerContainer"
            android:layout_width="match_parent"
            android:layout_height="293dp"
            android:gravity="center"
            android:visibility="gone">

            <com.madrapps.pikolo.HSLColorPicker
                android:id="@+id/colorPicker"
                android:layout_width="356dp"
                android:layout_height="286dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="0dp"
                app:layout_constraintBottom_toTopOf="@+id/randomColorButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                pikolo:arc_length="110"
                pikolo:hue_start_angle="30"
                pikolo:indicator_stroke_color="@color/white"
                pikolo:lightness_indicator_stroke_width="0dp"
                pikolo:lightness_start_angle="270"
                pikolo:radius_offset="20dp"
                pikolo:saturation_start_angle="150"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_circle"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottomMenuContainer"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="PEN"
                android:textOff="BALL"
                android:checked="true" />

            <Button
                android:id="@+id/colorPickerButton"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:text="Color Picker"
                android:textColor="@color/white"
                app:backgroundTint="@color/black" />

            <SeekBar
                android:id="@+id/sizeSlider"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Bottom horizontal toolbar -->
        <!--        <LinearLayout-->
        <!--            android:id="@+id/bottomToolbar"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal">-->

        <!-- Add your bottom toolbar contents here -->


    </LinearLayout>
</LinearLayout>


